--- a/FrontEnd1/package.json
+++ b/FrontEnd1/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy":"http://localhost:4000/",
   "name": "material-tailwind-dashboard-react",
   "private": true,
   "version": "2.0.0",
@@ -12,11 +13,14 @@
     "@heroicons/react": "2.0.12",
     "@material-tailwind/react": "1.2.4",
     "apexcharts": "3.35.5",
+    "axios": "^1.2.2",
+    "js-cookie": "^3.0.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.4.2"
+    "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
     "@types/react": "18.0.17",
