--- a/FrontEnd1/package.json
+++ b/FrontEnd1/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy":"http://localhost:4000/",
+  "proxy": "http://localhost:4000/",
   "name": "material-tailwind-dashboard-react",
   "private": true,
   "version": "2.0.0",
@@ -31,6 +31,6 @@
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "0.1.13",
     "tailwindcss": "3.1.8",
-    "vite": "3.1.0"
+    "vite": "^3.1.0"
   }
 }
