--- a/FrontEnd1/package.json
+++ b/FrontEnd1/package.json
@@ -20,7 +20,8 @@
     "react-apexcharts": "1.4.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^6.6.1",
+    "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
     "@types/react": "18.0.17",
