--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.1",
