--- a/FrontEnd1/package.json
+++ b/FrontEnd1/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "3.35.5",
     "axios": "^1.2.2",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
