--- a/FrontEnd1/package.json
+++ b/FrontEnd1/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-cookie": "^4.1.1",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.6.1",
     "reactjs-popup": "^2.0.5"
