--- a/FrontEnd1/package.json
+++ b/FrontEnd1/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:4000/",
+  "proxy": "https://skillhub-backend.onrender.com",
   "name": "material-tailwind-dashboard-react",
   "private": true,
   "version": "2.0.0",
